# ccloop

./: .clang-format  .gitignore  .license-header.txt  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  ETHOS.md  LICENSE.md  PLAN.md  README.md  TEST_PLAN.md
build_local/: CMakeCache.txt  CTestTestfile.cmake  Makefile  ccl  ccl.toml  ccl_test  cmake_install.cmake
cmake/: version.cmake  version.h.in
config/: ccl.toml.example  mcp.json.example
src/: agent.cpp  agent.h  config.cpp  config.h  connector.cpp  connector.h  connector_base.cpp  connector_base.h  connector_bedrock.cpp  connector_bedrock.h  connector_openai.cpp  connector_openai.h  connector_qwen.cpp  connector_qwen.h  context.cpp  context.h  json.cpp  json.h  llm_client.cpp  llm_client.h  main.cpp  mcp_client.cpp  mcp_client.h  signals.cpp  signals.h  tool_registry.cpp  tools.cpp  tools.h  types.h  ui.cpp  ui.h
tests/: harness.h  main.cpp  test_agent.cpp  test_config.cpp  test_context.cpp  test_json.cpp  test_llm_client.cpp  test_mcp_client.cpp  test_tools.cpp
